==> MinhChi0907/L3G4200D_Driver/Drivers/HAL/L3G4200D_STM32_HALDriver/L3G4200D_HAL.c <==
#include "L3G4200D_HAL.h"

uint8_t L3G4200D_I2C_Init(L3G4200D_I2C_Typedef *dev, I2C_HandleTypeDef *i2cHandle, DevMod_Typedef *device_mod, uint8_t dev_add)
{
    /* Check NULL pointer */
    if (dev == NULL || i2cHandle == NULL || device_mod == NULL)
    {
        return 200;
    }
    /* Reset L3G4200D struct parameter */
    dev->i2cHandle = i2cHandle;
    dev->Acc_X = 0.0f;
    dev->Acc_Y = 0.0f;
    dev->Acc_Z = 0.0f;
    dev->Temperature = 0.0f;
    dev->ID = 0;
    dev->DEV_ADD = dev_add;
    typedef struct
    {
        uint8_t Reg_add;
        uint8_t Reg_val;

    }Register_Config;
    uint8_t i2c_status = 0;
    /* Check device ID */
    i2c_status += L3G4200D_I2C_ReadRegister(dev, WHO_AM_I, &(dev->ID));
    if(dev->ID != L3G4200D_IDENTIFY)
        return 255;
    /* Init data to write into register to enable mode config by user */
    Register_Config Config[] = {
        {CTRL_REG1, device_mod->reg1.CTRL_REG1_Val},
        {CTRL_REG2, device_mod->reg2.CTRL_REG2_Val},
        {CTRL_REG3, device_mod->reg3.CTRL_REG3_Val},
        {CTRL_REG4, device_mod->reg4.CTRL_REG4_Val},
        {CTRL_REG5, device_mod->reg5.CTRL_REG5_Val},
        {REFERENCE, device_mod->ref_conf.ref_value},
        {FIFO_CTRL_REG, device_mod->fifo_ctr_conf.FIFO_CTRL_REG_Val},
        {INT1_CFG, device_mod->int1_conf.INT1_CFG_Val},
        {INT1_THS_XH, device_mod->ths_xh.value},
        {INT1_THS_XL, device_mod->ths_xl.value},
        {INT1_THS_YH, device_mod->ths_yh.value},
        {INT1_THS_YL, device_mod->ths_yl.value},
        {INT1_THS_ZH, device_mod->ths_zh.value},
        {INT1_THS_ZL, device_mod->ths_zl.value},
        {INT1_DURATION, device_mod->int1_dura.INT1_DURATION_Val}
    };
    for(uint8_t i = 0; i < (sizeof(Config)/sizeof(Config[0])); i++)
    {
        i2c_status += L3G4200D_I2C_WriteRegister(dev, Config[i].Reg_add, &Config[i].Reg_val);
    }
    return i2c_status;
}

uint8_t L3G4200D_I2C_ReadRegister(L3G4200D_I2C_Typedef *dev, uint8_t reg_add, uint8_t *data_buf)
{
    /* Check NULL pointer */
    if (data_buf == NULL || dev == NULL)
        return 200;
    uint8_t device_add;
    if(dev->DEV_ADD == 0x68)
        device_add = 0xD1;
    else
        device_add = 0xD3;
    return HAL_I2C_Mem_Read(dev->i2cHandle, device_add, reg_add, I2C_MEMADD_SIZE_8BIT, data_buf, 1, HAL_MAX_DELAY);
}

uint8_t L3G4200D_I2C_WriteRegister(L3G4200D_I2C_Typedef *dev, uint8_t reg_add, uint8_t *data_send)
{
    /* Check NULL pointer */
    if (data_send == NULL || dev == NULL)
        return 200;
    uint8_t device_add;
    if(dev->DEV_ADD == 0x68)
        device_add = 0xD0;
    else
        device_add = 0xD2;
    return HAL_I2C_Mem_Write(dev->i2cHandle, device_add, reg_add, I2C_MEMADD_SIZE_8BIT, data_send, 1, HAL_MAX_DELAY);
}

static void L3G4200D_Select(L3G4200D_SPI4W_Typedef *dev)
{
    HAL_GPIO_WritePin(dev->GPIOPort, dev->GPIO_Pin, GPIO_PIN_SET);
    /* Pull down CS pin to prepare transmission */
    HAL_GPIO_WritePin(dev->GPIOPort, dev->GPIO_Pin, GPIO_PIN_RESET);
}

static void L3G4200D_Deselect(L3G4200D_SPI4W_Typedef *dev)
{
    HAL_GPIO_WritePin(dev->GPIOPort, dev->GPIO_Pin, GPIO_PIN_SET);
}

uint8_t L3G4200D_SPI_4WIRE_Init(L3G4200D_SPI4W_Typedef *dev, SPI_HandleTypeDef *spiHandle, DevMod_Typedef *device_mod, GPIO_TypeDef *GPIOx, uint16_t GPIO_PIN_X)
{
    /* Check NULL pointer */
    if (dev == NULL || spiHandle == NULL || device_mod == NULL)
    {
        return 200;
    }
    /* Reset L3G4200D struct parameter */
    dev->spiHandle = spiHandle;
    dev->Acc_X = 0.0f;
    dev->Acc_Y = 0.0f;
    dev->Acc_Z = 0.0f;
    dev->Temperature = 0.0f;
    dev->ID = 0;
    dev->GPIOPort = GPIOx;
    dev->GPIO_Pin = GPIO_PIN_X;
    if ((dev->GPIOPort != NULL) && (dev->GPIO_Pin > 0x8000))
        return 150;
    typedef struct
    {
        uint8_t Reg_add;
        uint8_t Reg_val;

    }Register_Config;
    uint8_t spi_status = 0;
    /* Check device ID */
    spi_status = L3G4200D_SPI_4WIRE_ReadRegister(dev, WHO_AM_I, &(dev->ID));
    if (dev->ID != L3G4200D_IDENTIFY)
        return 255;
    /* Init data to write into register to enable mode config by user */
    Register_Config Config[] = {
        {CTRL_REG1, device_mod->reg1.CTRL_REG1_Val},
        {CTRL_REG2, device_mod->reg2.CTRL_REG2_Val},
        {CTRL_REG3, device_mod->reg3.CTRL_REG3_Val},
        {CTRL_REG4, device_mod->reg4.CTRL_REG4_Val},
        {CTRL_REG5, device_mod->reg5.CTRL_REG5_Val},
        {REFERENCE, device_mod->ref_conf.ref_value},
        {FIFO_CTRL_REG, device_mod->fifo_ctr_conf.FIFO_CTRL_REG_Val},
        {INT1_CFG, device_mod->int1_conf.INT1_CFG_Val},
        {INT1_THS_XH, device_mod->ths_xh.value},
        {INT1_THS_XL, device_mod->ths_xl.value},
        {INT1_THS_YH, device_mod->ths_yh.value},
        {INT1_THS_YL, device_mod->ths_yl.value},
        {INT1_THS_ZH, device_mod->ths_zh.value},
        {INT1_THS_ZL, device_mod->ths_zl.value},
        {INT1_DURATION, device_mod->int1_dura.INT1_DURATION_Val}
    };
    for (uint8_t i = 0; i < (sizeof(Config)/sizeof(Config[0])); i++)
    {
        spi_status += L3G4200D_SPI_4WIRE_WriteRegister(dev, Config[i].Reg_add, &Config[i].Reg_val);
    }
    return spi_status;
}

uint8_t L3G4200D_SPI_4WIRE_ReadRegister(L3G4200D_SPI4W_Typedef *dev, uint8_t reg_add, uint8_t *pRxData)
{
    /* Check NULL pointer */
    if (dev == NULL)
        return 200;
    uint8_t spi_status = 0, read_request[2] = {(reg_add | SPI_READ_REQUEST), SPI_DUMMY}, read_data[2];
    /* Select L3G4200D to transmission */
    L3G4200D_Select(dev);
    /* Transmit 1 byte data to request read and receive data from register */
    spi_status = HAL_SPI_TransmitReceive(dev->spiHandle, read_request, read_data, 2, HAL_MAX_DELAY);
    /* Stop transmission */
    L3G4200D_Deselect(dev);
    /* Assign readable value to pointer pRxData */
    *pRxData = read_data[1];
    return spi_status;
}

uint8_t L3G4200D_SPI_4WIRE_WriteRegister(L3G4200D_SPI4W_Typedef *dev, uint8_t reg_add, uint8_t *pTxData)
{
    /* Check NULL pointer */
    if (dev == NULL)
        return 200;
    uint8_t spi_status = 0, write_request[2] = {(reg_add & SPI_WRITE_REQUEST), *pTxData};
    /* Select L3G4200D to transmission */
    L3G4200D_Select(dev);
    /* Transmit 1 byte data to request write and 1 byte value to into register */
    spi_status = HAL_SPI_Transmit(dev->spiHandle, write_request, 2, HAL_MAX_DELAY);
    /* Stop transmission */
    L3G4200D_Deselect(dev);
    return spi_status;
}
